Closed
Bug 93895
Opened 24 years ago
Closed 24 years ago
Many menu items don't work with full-page plugins (like PDF) on Mac
Categories
(Core Graveyard :: Plug-ins, defect, P2)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.0
People
(Reporter: mpt, Assigned: peterlubczynski-bugs)
References
()
Details
(Keywords: platform-parity, Whiteboard: [ADT1])
Attachments
(1 file)
|
775 bytes,
patch
|
serhunt
:
review+
attinasi
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
Build: 2001070308, Mac OS 9.1
To reproduce:
1. Open a PDF file in Navigator (using the Acrobat plug-in).
2. Choose anything from the menus. Anything at all. Open File, Preferences,
Show/Hide > Personal Toolbar, Quit, whatever.
What should happen:
* They work.
What actually happens:
* They don't.
Unlike my usual `No menu items or keyboard shortcuts work when {x} has focus'
bugs, in this case keyboard shortcuts do work. (Of course, not all menu items
have keyboard shortcuts.)
Comment 1•24 years ago
|
||
shrir, have you encountered this? i'll check in a bit...
Comment 2•24 years ago
|
||
Works on Win2k (SP2) with latest nightly, so this is definitely platform specific.
The only bug I run into with .pdf files is bug 87045
Jake
Comment 3•24 years ago
|
||
yikes....mac os 9.0..this is happening on 0801 mac trunk builds..stealing this
one from u,sairuh (qa)
QA Contact: sairuh → shrir
| Reporter | ||
Comment 4•24 years ago
|
||
Sorry, where I wrote `2001070308' above I actually meant `2001080308'. So the
build I reported the bug on is later than the build Shrir reproduced the bug on.
Comment 5•24 years ago
|
||
--> plugins for a look
Assignee: blake → av
Component: XP Apps: GUI Features → Plug-ins
| Assignee | ||
Comment 8•24 years ago
|
||
No wonder File | Print doesn't work....
No menu items work at all, not even exit! Some help in the direction to start
looking would be nice.
Status: NEW → ASSIGNED
Keywords: nsbranch
OS: Mac System 8.5 → Mac System 8.6
Priority: -- → P2
Summary: No menu items work when a PDF file is open in Navigator → Mac only: No menu items work when a PDF file is open in Navigator
Target Milestone: --- → mozilla0.9.5
Comment 9•24 years ago
|
||
There aren't any comments on this bug since the 19th of Sept. Can QA regess
against the Netscape commercial builds and determine if this is still a valid
bug? Please mark as nsbranch+ which will get this on the PDT radar if you think
this is critical and can give us an ETA for the fix. Else, mark is as nsbranch-.
Also, can someone comment in the bug how serious you think this is? PDT is only
accepting "stop ship" bugs at this point such as data loss, loss of major
functionality, regressions and bugs to the eMojo "stop ship" features.
Comment 10•24 years ago
|
||
cc: arun for feedback on importance of this to Adobe.
| Assignee | ||
Comment 11•24 years ago
|
||
This has slightly changed....
changing summary from:
Mac only: No menu items work when a PDF file is open in Navigator
Summary: Mac only: No menu items work when a PDF file is open in Navigator → Mac only: File menu items can only be used once for full-page plugins (like PDF)
Comment 12•24 years ago
|
||
This affects things like Print, Quit, Save.
Updated•24 years ago
|
Whiteboard: [Need ETA]
| Assignee | ||
Updated•24 years ago
|
Keywords: helpwanted
Whiteboard: [Need ETA] → [Need ETA] helpwanted
| Assignee | ||
Updated•24 years ago
|
| Assignee | ||
Comment 13•24 years ago
|
||
seems to work fine the first time.....not a stop ship
| Assignee | ||
Updated•24 years ago
|
Target Milestone: mozilla0.9.5 → mozilla0.9.6
| Assignee | ||
Updated•24 years ago
|
Target Milestone: mozilla0.9.6 → mozilla0.9.7
| Assignee | ||
Comment 14•24 years ago
|
||
I'll revisit this when bug 90256 is fixed, but before 1.0.
Depends on: 90256
Keywords: helpwanted → mozilla1.0
Whiteboard: [Need ETA] helpwanted
Target Milestone: mozilla0.9.7 → mozilla1.0
| Reporter | ||
Comment 15•24 years ago
|
||
Restoring (nearly) original summary. With build 2001122008, Mac OS 9.1, the menu
items don't even work the first time. And it's not just items in the `File'
menu: none of the items in the `View' menu work either (e.g. `View' >
`Show/Hide' > `Status Bar', or `View' > `Page Info'), and the `Bookmarks' menu
is reduced to a single empty and disabled item which has the keyboard shortcut
†+Shift+º+@.
Comment 16•24 years ago
|
||
The linux Acrobat plugin prints the following to the console when it starts:
Warning: Actions not found: addBookmark, viewBookmark, copy, undefined-key,
find, findAgain, history, loadImages, openURL, mailNew, new, openFile, print,
exit, reload, saveAs, paste, delete, cut, undo, historyItem, back, forward,
abort, PageUp, PageDown
Warning: Actions not found: ManagerGadgetNextTabGroup,
ManagerGadgetPrevTabGroup, DrawingAreaInput, addBookmark, viewBookmark, copy,
undefined-key, find, findAgain, history, loadImages, openURL, mailNew, new,
openFile, print, exit, reload, saveAs, paste, delete, cut, undo, historyItem,
back, forward, abort, PageUp, PageDown
Warning: No action proc named "ManagerGadgetArm" is registered for widget "form"
Should this bug be changed to "All"?
Comment 17•24 years ago
|
||
This sounds like an interesting bug.
| Assignee | ||
Comment 18•24 years ago
|
||
nominating nsbeta1
Comment 19•24 years ago
|
||
Shrirang, can you test this and let us know if this is an ongoing problem? I'm
temporarily minusing this per ADT triage. If you think this is still there, let
us know during the plugins meeting.
Comment 20•24 years ago
|
||
Oh yeah, this still exists ! I just retried this with 0220 trunk...still
happening as mentioned initially. However, if you are launching acrobat for the
first time inside the browser window, you might see that the acrobat menu comes
up instead of the browser menu (bug already filed). so one has to click inside
the content area first to get the browser menu back.
Comment 21•24 years ago
|
||
Moving this to moz1.1 for now, based on nsbeta1- setting
Target Milestone: mozilla1.0 → mozilla1.1
Comment 22•24 years ago
|
||
Wanted to add....On *windows*, only the VIEW menu does not open( branch build
only). Trunk works ok (all menus/items) open fine.
Comment 23•24 years ago
|
||
This is a very high priority bug to get fixed for Acrobat users
on the Mac. It makes the product barely useable.
| Assignee | ||
Comment 24•24 years ago
|
||
removing minus to renominate nsbeta1
Updated•24 years ago
|
Target Milestone: mozilla1.1alpha → mozilla1.0
Comment 26•24 years ago
|
||
changing platform and os from mac 8.6 to "all" since this bug has been tested on
various platforms according to its comments.
also adding adt1 to status whiteboard as per discussion with beppe.
OS: Mac System 8.6 → All
Hardware: Macintosh → All
Whiteboard: [ADT1]
| Assignee | ||
Comment 27•24 years ago
|
||
This is a Mac-only bug. The failures of menus on other platforms should be
covered in other bugs.
OS: All → Mac System 9.x
Hardware: All → Macintosh
Summary: Many menu items don't work with full-page plugins (like PDF) → Many menu items don't work with full-page plugins (like PDF) on Mac
Comment 28•24 years ago
|
||
adding saari to this one, we could use some words of wisdom Chris.
| Assignee | ||
Comment 29•24 years ago
|
||
*** Bug 134551 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 30•24 years ago
|
||
Wow! We were already sending all menu events to full-page plugins on Mac! This
bug was happening because layout thought the plugin consumed the event. This
patch fixes the problem by always returning ignore status for menus.
Comment 31•24 years ago
|
||
Comment on attachment 78451 [details] [diff] [review]
patch v.1
This is cool, r=av
Attachment #78451 -
Flags: review+
Comment 32•24 years ago
|
||
Comment on attachment 78451 [details] [diff] [review]
patch v.1
OK! sr=attinasi
Attachment #78451 -
Flags: superreview+
| Assignee | ||
Updated•24 years ago
|
Comment 34•24 years ago
|
||
Comment on attachment 78451 [details] [diff] [review]
patch v.1
a=asa (on behalf of drivers) for checkin to the 1.0 branch
Attachment #78451 -
Flags: approval+
| Assignee | ||
Comment 35•24 years ago
|
||
checked in on trunk and branch, marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 36•24 years ago
|
||
removing item for this bug from the release notes since the bug is marked
fixed. If this is in error, please make a note in the release notes bug for
the current milestone.
Comment 37•24 years ago
|
||
this is fixed, verif on 0416 branch/trunk on os 9.2. All menu items work fine
now while pdf is open.
Status: RESOLVED → VERIFIED
Comment 38•24 years ago
|
||
Seems to be almost completely fixed in FizzillaCFM/2002041712 as well, except
for Command-L, which normally puts focus to the URL bar, highlighting its'
contents. This fails with a full-page plug-in in use. All other key commands
seem to work.
Reopening for confirmation/verification. Can anyone verify using OS X or OS 9?
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Comment 39•24 years ago
|
||
well, unfortunately, on Mac OS 9.2.2, i get no love from keyboard shortcuts with
Mozilla 1RC1 (Build ID: 2002041711) and Acrobat Reader Plugin v5.0.5.
in fact, i may have uncovered a new bug.
try this (with the above software conditions):
1. launch Mozilla.
2. visit http://www.irs.gov/pub/irs-pdf/f1040.pdf
3. hit Cmd-T to open a new tab.
4. nothing happens.
5. File->New->Navigator Tab
6. visit http://bugzilla.mozilla.org/show_bug.cgi?id=93895
7. click the (Untitled Tab) where http://www.irs.gov/pub/irs-pdf/f1040.pdf is
located.
8. the Location Bar still shows http://bugzilla.mozilla.org/show_bug.cgi?id=93895
should i file that as a new bug? the fact that the Location Bar is incorrect
with fullpage plugins?
this is definitely an improvement over 0.9.9, where even manually accessing the
menus didn't work in my current software setup, but it seems like this bug is
not completely fixed.
additionally, i will add that on Mac OS X, the Acrobat plugin never actually
launches within Mozilla. it always tries to launch the external Acrobat app. i'm
pretty sure the plugin is installed correctly, too.
| Assignee | ||
Comment 40•24 years ago
|
||
Please open a seperate bug (or find an exsisting one) about keyboard shortcut
keys with full-page plugins, this bug is about menu items. Marking FIXED, again.
Status: REOPENED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
Comment 42•24 years ago
|
||
FYI -- OS X version of viewing PDF in the browser window is under development.
(Not a trivial task due to the fact that Acrobat runs as a separate
application.)
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•