Stop sending bogus menu events to full-page plugins bug 93895 r=av sr=attinasi